# AlanFramework

./: .gitignore  README.md  RELEASE_NOTES.md  index.md
profiles/: agent_default_profile.json
scripts/: dump_lsass.js  test.js
src/client/: CMakeLists.txt  CMakeSettings.json
src/client/agent/: agent.c  cmd_download_files.c  cmd_exec.c  cmd_kill.c  cmd_migrate.c  cmd_proxy.c  cmd_run.c  cmd_shell.c  cmd_sleep.c  cmd_sysinfo.c  cmd_upload_files.c  filesystem.c  http.c  lz4.c  network.c  protocol.c  proxy_socks5.c  registration.c  serializer.c  session.c  str_builder.c  utility.c
src/client/include/: agent_commands.h  agent_config.h  agent_event.h  agent_filesystem.h  agent_http.h  agent_named_pipe.h  agent_network.h  agent_output_interceptor.h  agent_process.h  agent_protocol.h  agent_proxy.h  agent_session.h  agent_shell.h  agent_thread.h  agent_utility.h  lz4.h  str_builder.h
src/client/pe_packer/: dll_main.c  exe_main.c  main.c
src/client/socks5/: proxy_main.c
src/client/windows_agent/: dll_main.c  exe_main.c  win_anti.c  win_event.c  win_main.c  win_named_pipe.c  win_network.c  win_process.c  win_shell.c  win_sysinfo.c  win_thread.c  win_utility.c
src/client/windows_agent/asm/: main.asm
src/client/windows_agent/asm/x64/: alter_pe_sections.inc
src/client/windows_agent/asm/x86/: alter_pe_sections.inc
src/client/windows_agent/include/: dirent.h  getopt.h
src/client/windows_console_interceptor/: dll_main.c  exe_main.c  interceptor.c
src/quickjs-module/: README.txt  qjs.c  quickjs-libc.c  quickjs.c
src/quickjs-module/scripts/: dump_lsass.js  enum_services.js  test.js
src/quickjs-module/solution_dir/vs2022/: qjs.vcxproj  qjsc.vcxproj  quickjs.sln  quickjs.vcxproj  quickjs.vcxproj.filters
src/quickjs-module/wqjs/: main.c  quickjs_win32.c  run_js.c  run_js.h  wqjs.vcxproj  wqjs.vcxproj.filters
src/server/: ServerSln.sln  paket.dependencies
src/server/AddResourceToAgent/: AddResourceToAgent.fsproj  Program.fs
src/server/AddResourceToAgent/Properties/: launchSettings.json
src/server/DotNetAgentRunnerTest/: AgentFiles.cs  DotNetAgentRunnerTest.csproj  Program.cs
src/server/DotNetAgentRunnerTest/Properties/: AssemblyInfo.cs
src/server/DotNetAgentRunnerX64/: DotNetAgentRunnerX64.csproj
src/server/DotNetAgentRunnerX64/Properties/: AssemblyInfo.cs
src/server/DotNetAgentRunnerX86/: AgentRunner.cs  DotNetAgentRunnerX86.csproj
src/server/DotNetAgentRunnerX86/Properties/: AssemblyInfo.cs
src/server/ES.Alan.Core/: AgentMessages.fs  AgentService.fs  AgentSession.fs  AgentSettings.fs  ArtifactPacker.fs  DataFormatter.fs  ES.Alan.Core.fsproj  Entities.fs  FrameworkMessages.fs  IListener.fs  JsonHelper.fs  LiteDbRepository.fs  MessageBroker.fs  Repositories.fs  Utility.fs  paket.references
src/server/PrintArgumentsTest/: PrintArgumentsTest.c  PrintArgumentsTest.vcxproj  PrintArgumentsTest.vcxproj.filters
src/server/Server/: AssemblyInfo.fs  EvidenceLogger.fs  Program.fs  ProxyStorage.fs  Server.fsproj  ServerSettings.fs  paket.references
src/server/Server/Consoles/: AgentCliConsole.fs  AgentConsoleOutput.fs  AgentShellCliConsole.fs  CliConsole.fs  ConsoleUtility.fs  DashboardCliConsole.fs  ICliConsole.fs  NetworkUtility.fs
src/server/Server/Listeners/: WebListener.fs  WebListenerSettings.fs
src/server/Server/Properties/: launchSettings.json
src/server/Server/config/: http_listener_config.json  https_listener_config.json  server_config.json
src/server/Server/profiles/: agent_default_profile.json
src/server/ServerBuilder/: Program.fs  ServerBuilder.fsproj  paket.references
src/server/ServerBuilder/resources/: agent_default_profile.json  http_listener_config.json  https_listener_config.json  packaging_powershell_template_x64.ps1  packaging_powershell_template_x86.ps1  powershell_command_x64.ps1  powershell_command_x86.ps1
src/server/x64PELoader/: def.inc  main.asm  paramhelp_public.inc  test_agent_dll.inc  test_agent_exe.inc  test_blob_x64_dll.inc  test_nanodump_exe.inc  test_oleacchooks_delay_import_dll.inc  test_print_args_console_exe.inc  test_symsrv_dll.inc  utility.inc  x64PELoader.vcxproj  x64PELoader.vcxproj.filters
src/server/x86PELoader/: def.inc  main.asm  test_agent_dll.inc  test_agent_exe.inc  test_blobrunner_console_exe.inc  test_oleacchooks_delay_import_dll.inc  test_print_args_console_exe.inc  test_proxy_dll.inc  test_x96dbg_exe.inc  utility.inc  x86PELoader.vcxproj  x86PELoader.vcxproj.filters
